change profile card

--- a/css/general.scss
+++ b/css/general.scss
@@ -34,9 +34,10 @@
     .profile-card {
         border: #e6e6e6 solid 1px;
         border-radius: 2px;
-        height: 150px;
+        min-height: 150px;
         position: relative;
         cursor: pointer;
+        height: auto;
 
 
         .avatar {
@@ -48,9 +49,9 @@
 
         .text {
             display: inline-block;
-            position: absolute;
-            top: 30px;
             line-height: 1.5;
+            margin: 20px 0;
+            width: 80%;
         }
     }
 
