--- a/css/default-container.css
+++ b/css/default-container.css
@@ -2,7 +2,8 @@
     background-color: white;
     margin: 30px auto;
     padding: 50px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, .12), 0 0 6px rgba(0, 0, 0, .04)
+    box-shadow: 0 2px 4px rgba(0, 0, 0, .12), 0 0 6px rgba(0, 0, 0, .04);
+    border-radius: 24px;
 }
 
 a {
