--- a/css/general.scss
+++ b/css/general.scss
@@ -7,6 +7,7 @@
 .default-container.detail {
     margin-top: 100px;
     position: relative;
+    border-radius: 24px;
 
     .avatar {
         position: absolute;
